added feedback request apis

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,11 @@ DB_NAME=my_cargo_db
 DB_USER=
 DB_PASS=
 
+STATIC_OTP=
+
 # Security
 JWT_SECRET=your-super-secret-jwt-key-here-please-change-this
+JWT_EXPIRES_IN=
 SESSION_SECRET=your-super-secret-session-key-here-please-change-this
 
 # Logging
@@ -32,3 +35,43 @@ SMTP_PASS=
 
 # Third-party APIs
 GST_API_KEY=
+
+# DigitalOcean Details
+RZP_BUCKET_NAME=
+BUCKET_NAME=
+ACCESS_KEY_Id=
+SECRETACCESSKEY=
+REGION=
+bucket_endpoint=
+
+# Netcore Details
+NETCORE_PHONE_NUMBER=
+
+## Templates
+BOOKING_CONFIRMED=
+BOOKING_ARRIVED=
+FEEDBACK_REQUEST=
+
+# Whatsapp Details
+WHATSAPP_ENABLED=
+WHATSAPP_MESSAGE_URL=
+WHATSAPP_MEDIA_URL=
+WHATSAPP_API_TOKEN=
+WHATSAPP_CONVERSATION_URL=
+
+# Razor Pay Details
+RAZORPAY_ENABLED=
+RAZORPAY_API_URL=
+RAZORPAY_KEY_ID=
+RAZORPAY_KEY_SECRET=
+RAZORPAY_WEBHOOK_SECRET=
+
+# E-Way bill Details
+EWB_EMAIL=
+EWB_USERNAME=
+EWB_PASSWORD=
+EWB_BASE_URL=
+EWB_CLIENT_ID=
+EWB_CLIENT_SECRET=
+EWB_GST_IN=
+IP_ADDRESS=
